<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Final Project</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="txt_title_login">Log In</string>
    <string name="txt_title_login2">Don\'t have an account?</string>
    <string name="signup_link">Sign Up</string>
    <string name="menu_dashboard">Home</string>
    <string name="menu_upload">Add</string>
    <string name="menu_profile">Profile</string>
    <string name="txt_title_signup">Sign Up</string>
    <string name="Name">Fullname*</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="signin_link">Sign In</string>
    <string name="slogan">Find your dream Home</string>
    <string name="slogan1">Your desire is our priority</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_intro_next_button" tools:ignore="MissingTranslation">NEXT</string>
    <string name="app_intro_back_button" tools:ignore="MissingTranslation">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description" tools:ignore="MissingTranslation">graphics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_app_bar">Hehe</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="btn_login">Login</string>
    <string name="txt_forget_password">Forget password?</string>
    <string name="olw">Or login with</string>
    <string name="txt_title_login3">Already have an account?</string>
    <string name="error_input_password_signup">Password cannot be empty</string>
    <string name="error_input_confirm_password_signup">Confirm password cannot be empty.</string>
    <string name="error_input_password_unmatch_signup">Mismatch between the password and the confirmation password.</string>
    <string name="error_name_signup">The fullname cannot be left blank.</string>
    <string name="error_name_unique_signup">Name cannot contain unique letters.</string>
    <string name="error_input_email_empty">Email cannot be empty.</string>
    <string name="error_invalid_email">Invalid email address.</string>
    <string name="error_password_less_than_six_letters">Must be at least eight characters.</string>
    <string name="txt_title_progress_bar">Please wait…</string>
    <string name="ta_successful_registration">Registration was successful. Please check your email for verification.</string>
    <string name="error_verification_by_email_failure">"Registration Error: "</string>
    <string name="error_empty_credential">Empty credential. Please fill out required fields to log in.</string>
    <string name="error_not_verified_email">Please check your email to verify your account.</string>
    <string name="title_forgot_your_password">Forgot Your Password?</string>
    <string name="content_forgot_your_password">Enter your Registered Email and we will mail you a link to reset password.</string>
    <string name="txt_email">Your email</string>
    <string name="btn_send_email">Send Email</string>
    <string name="txt_successful_sending_email">Sent Successfully!</string>
    <string name="txt_sub_title_sending_email">Please check your email for a link to reset your password.</string>
    <string name="txt_failed_sending_email">Send failed!</string>
    <string name="btn_negative">Cancle</string>
    <string name="btn_positive">OK</string>
    <string name="txt_pleaseWait">Please wait</string>
    <string name="txt_loading">Loading...</string>
    <string name="txt_try_again">Try Again</string>
    <string name="txt_action_search">Search</string>
    <string name="txt_title_congratulation">Congratulation!!!</string>
    <string name="txt_sub_title_sign_in_google">Your account created successful. Please check your email for a link to reset your password.</string>
    <string name="txt_title_logged_failed">Logged Failed.</string>
    <string name="sub_title_logged_failed">Logged with Google link failed.</string>
    <string name="facebook_app_id">287321126848740</string>
    <string name="fb_login_protocol_scheme">fb287321126848740</string>
    <string name="facebook_client_token">1593741a72bcac5efec43fc58a297af0</string>
    <string name="sub_title_logged_failed_facebook">Login with Facebook link failed.</string>
    <string name="txt_content_iv_back_button">Back Button</string>
    <string name="btn_create_account">Create Account</string>
    <string name="txt_category_name">CatName</string>
    <string name="property_name">Name</string>
    <string name="property_address">Address</string>
    <string name="rentNow">Rent Now</string>
    <string name="txt_title_category">Categories</string>
    <string name="txt_price">Price</string>
    <string name="txt_per_month">Per Month</string>
    <string name="txt_hint_search_box">Search Best Place…</string>
    <string name="txt_for_you">For You</string>
    <string name="txt_view_all">View all</string>
    <string name="menuI_item_role">Role</string>
    <string name="txt_about_app">About App</string>
    <string name="txt_help">Help</string>
    <string name="rBtnOwner">Owner</string>
    <string name="rBtnTenant">Tenant</string>
    <string name="txt_user_full_name">Username</string>
    <string name="txt_user_email">User email</string>
    <string name="txt_log_out">Log Out</string>
    <string name="item_profile">Profile</string>
    <string name="item_review">Review</string>
    <string name="item_favorite">Favorite</string>
    <string name="item_home">Home</string>
    <string name="txt_name_dev">Khanh Nguyen</string>
    <string name="fluffy_home">Fluffy Home</string>
    <string name="app_description">Fluffy Home is a Android Application, which buid for support the user can find their house in Viet Nam.</string>
    <string name="email_link">ngocmao99@gmail.com</string>
    <string name="description_myself">My name is Nguyen Ngoc Khanh - a student of University of Greenwich. My skill focus on APS.NET, but with I am trying with new skill Android Application with Fluffy Home for my Final Project.</string>
    <string name="item_property">My Prơperty</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_change_pass">Change Password</string>
    <string name="txt_district_create">District*</string>
    <string name="txt_province_city">Province / City*</string>
    <string name="txt_ward_create">Ward*</string>
    <string name="txt_houseNumber_create">House Number*</string>
    <string name="property_type">Property Type</string>
    <string-array name="floor">
        <item>1-2</item>
        <item>2-4</item>
        <item>4-6</item>
        <item>> 7</item>
    </string-array>
    <string-array name="DanhSachTinh">
        <item>Hồ Chí Minh</item>
        <item>Hà Nội</item>
        <item>Hải Phòng</item>
        <item>Đà Nẵng</item>
        <item>Cần Thơ</item>
        <item>Phú Yên</item>
        <item>Yên Bái</item>
        <item>Vĩnh Phúc</item>
        <item>Vĩnh Long</item>
        <item>Tuyên Quang</item>
        <item>Trà Vinh</item>
        <item>Tiền Giang</item>
        <item>Thừa Thiên Huế</item>
        <item>Thanh Hóa</item>
        <item>Thái Nguyên</item>
        <item>Thái Bình</item>
        <item>Tây Ninh</item>
        <item>Sơn La</item>
        <item>Sóc Trăng</item>
        <item>Quảng Trị</item>
        <item>Quảng Ninh</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Nam</item>
        <item>Quảng Bình</item>
        <item>Phú Thọ</item>
        <item>Ninh Thuận</item>
        <item>Ninh Bình</item>
        <item>Nghệ An</item>
        <item>Nam Định</item>
        <item>Long An</item>
        <item>Lào Cai</item>
        <item>Lạng Sơn</item>
        <item>Lâm Đồng</item>
        <item>Lai Châu</item>
        <item>Kon Tum</item>
        <item>Kiên Giang</item>
        <item>Khánh Hòa</item>
        <item>Hưng Yên</item>
        <item>Hòa Bình</item>
        <item>Hậu Giang</item>
        <item>Hải Dương</item>
        <item>Hà Tĩnh</item>
        <item>Hà Nam</item>
        <item>Hà Giang</item>
        <item>Gia Lai</item>
        <item>Đồng Tháp</item>
        <item>Đồng Nai</item>
        <item>Điện Biên</item>
        <item>Đắk Nông</item>
        <item>Đắk Lắk</item>
        <item>Cao Bằng</item>
        <item>Cà Mau</item>
        <item>Bình Thuận</item>
        <item>Bình Phước</item>
        <item>Bình Dương</item>
        <item>Bình Định</item>
        <item>Bến Tre</item>
        <item>Bắc Ninh</item>
        <item>Bạc Liêu</item>
        <item>Bắc Kạn</item>
        <item>Bắc Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>An Giang</item>
    </string-array>
    <string-array name="angiangdistricts">
        <item>Long Xuyên</item>
        <item>Châu Đốc</item>
        <item>Tân Châu</item>
        <item>An Phú</item>
        <item>Tinh Biên</item>
        <item>Trí Tôn</item>
        <item>Châu Phú</item>
        <item>Châu Thành</item>
        <item>Thoại Sơn</item>
        <item>Chợ Mới</item>
        <item>Phú Tân</item>
    </string-array>
    <string-array name="bataudistricts">
        <item>Vũng Tàu</item>
        <item>Bà Rịa</item>
        <item>Châu Đức</item>
        <item>Xuyên Mộc</item>
        <item>Long Điền</item>
        <item>Đất Đỏ</item>
        <item>Phú Mỹ</item>
        <item>Côn Đảo</item>
    </string-array>
    <string-array name="baclieudistricts">
        <item>Bạc Liêu</item>
        <item>Hồng Dân</item>
        <item>Phước Long</item>
        <item>Vĩnh Lợi</item>
        <item>Gia Rai</item>
        <item>Đông Hải</item>
        <item>Hòa Bình</item>
    </string-array>
    <string-array name="backandists">
        <item>Bắc Kạn</item>
        <item>Pác Nặm</item>
        <item>Ba Bể</item>
        <item>Ngân Sơn</item>
        <item>Bạch Thông</item>
        <item>Chợ Đồn</item>
        <item>Chợ Mới</item>
        <item>Na Rì</item>
    </string-array>
    <string-array name="tuyenquangdist">
        <item>Tuyen Quang</item>
        <item>Lam Binh</item>
        <item>Na Hang</item>
        <item>Chiem Hoa</item>
        <item>Ham Yen</item>
        <item>Yen Son</item>
        <item>Son Duong</item>
    </string-array>
    <string-array name="laocaidist">
        <item>Lao Cai</item>
        <item>Bat Xat</item>
        <item>Muong Khuong</item>
        <item>Si Ma Cai</item>
        <item>Bac Ha</item>
        <item>Bao Thang</item>
        <item>Bao Yen</item>
        <item>Sa Pa</item>
        <item>Van Ban</item>
    </string-array>
    <string-array name="dienbiendist">
        <item>Dien Bien Phu</item>
        <item>Muong Lay</item>
        <item>Muong Nhe</item>
        <item>Muong Cha</item>
        <item>Tua Chua</item>
        <item>Tuan Giao</item>
        <item>Dien Bien</item>
        <item>Dien Bien Dong</item>
        <item>Muong Ang</item>
        <item>Nam Pho</item>
    </string-array>
    <string-array name="laichaudist">
        <item>Lai Chau</item>
        <item>Tam Duong</item>
        <item>Muong Te</item>
        <item>Sinh Ho</item>
        <item>Phong Tho</item>
        <item>Than Uyen</item>
        <item>Tan Uyen</item>
        <item>Nam Nhun</item>
    </string-array>
    <string name="txt_phoneNumber">Phone Number</string>
    <string name="fullName">Fullname</string>
    <string name="email_address">Email address</string>
    <string name="inbox">chat</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_email_text">Kindly provide your information. We will contact as soon as possible.</string>
    <string name="txt_message">Your message</string>
    <string name="btn_send">Send</string>
</resources>