<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_Feed"
        android:name="com.example.finalproject.view.activity.menu.Fragment_Feed"
        android:label="@string/menu_feed"
        tools:layout="@layout/feed_fragment" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalproject.view.activity.menu.Fragment_Home"
        android:label="@string/menu_home"
        tools:layout="@layout/homefragment" />

    <fragment
        android:id="@+id/nav_Profile"
        android:name="com.example.finalproject.view.activity.menu.Fragment_Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/profilefragment" />
    <fragment
        android:id="@+id/nav_Favorite"
        android:name="com.example.finalproject.view.activity.menu.Fragment_Favorite"
        android:label="@string/menu_favorite"
        tools:layout="@layout/favorite_fragment" />
</navigation>