<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="25dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:text="@string/txt_email_text"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/first"
            android:paddingTop="10dp"
            android:paddingHorizontal="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/fullName"
            android:layout_marginHorizontal="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/first"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_fullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="text"
                android:scrollbars="horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email_address"
            android:layout_marginHorizontal="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/first"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="textEmailAddress"
                android:scrollbars="horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_phoneNumber"
            android:layout_marginHorizontal="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/first"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="11">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="phone"
                android:scrollbars="horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMessage"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_message"
            android:layout_marginHorizontal="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/first"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="textMultiLine"
                android:scrollbars="horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/colorBlue"
                android:elevation="5dp"
                android:id="@+id/btnSendMail"
                app:cardCornerRadius="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/btn_send"
                    android:textColor="@color/white"
                    android:gravity="center"
                    />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/red"
                android:elevation="5dp"
                android:id="@+id/btnCancelMail"
                app:cardCornerRadius="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/txt_cancel"
                    android:textColor="@color/white"
                    android:gravity="center"
                    />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>




</com.google.android.material.card.MaterialCardView>